--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -103,8 +103,12 @@ jobs:
         authToken: ${{ secrets.HLS_CACHIX_AUTH_TOKEN }}
     - name: Build development shell
       run: nix develop --print-build-logs --profile dev
-    - name: Build all development shell
-      run: nix develop --print-build-logs .#all-dev-shells --profile dev
+    - name: Build all development shell (without nix dependencies)
+      run: nix develop --print-build-logs .#all-simple-dev-shells --profile dev
+    # We only build nix dev shell for current GHC version because some are
+    # failing with different GHC version on darwin.
+    - name: Build development shell with nix dependencies for current GHC version
+      run: nix develop --print-build-logs .#haskell-language-server-dev --profile dev
     - name: Push development shell
       if: ${{ env.HAS_TOKEN == 'true' }}
       run: cachix push haskell-language-server dev
