--- a/plugins/hls-change-type-signature-plugin/hls-change-type-signature-plugin.cabal
+++ b/plugins/hls-change-type-signature-plugin/hls-change-type-signature-plugin.cabal
@@ -46,14 +46,19 @@ test-suite tests
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
-  other-modules: Properties.Conversion
   main-is:          Main.hs
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
   build-depends:
     , base                 >=4.12 && < 5
+    , filepath
     , hls-change-type-signature-plugin
     , hls-test-utils       ^>=1.2
     , lsp
     , QuickCheck
     , regex-tdfa
     , text
+  default-extensions:
+    NamedFieldPuns
+    OverloadedStrings
+    TypeOperators
+    ViewPatterns
