--- a/stack-9.0.2.yaml
+++ b/stack-9.0.2.yaml
@@ -21,7 +21,7 @@ packages:
 - ./plugins/hls-splice-plugin
 - ./plugins/hls-tactics-plugin
 - ./plugins/hls-brittany-plugin
-# - ./plugins/hls-stylish-haskell-plugin
+- ./plugins/hls-stylish-haskell-plugin
 - ./plugins/hls-floskell-plugin
 - ./plugins/hls-fourmolu-plugin
 - ./plugins/hls-pragmas-plugin
@@ -87,6 +87,10 @@ extra-deps:
 - unix-2.7.2.2
 - Win32-2.12.0.1
 
+# stylish-haskell 9.0
+- github: July541/stylish-haskell
+  commit: b08a85716b991359a46a32e8e7ba5780664d31ae
+
 # currently needed for ghcide>extra, etc.
 allow-newer: true
 
@@ -106,7 +110,6 @@ flags:
     pedantic: true
 
     ignore-plugins-ghc-bounds: true
-    stylishHaskell: false
 
   retrie:
     BuildExecutable: false
