--- a/cabal-ghc90.project
+++ b/cabal-ghc90.project
@@ -35,6 +35,13 @@ package *
   ghc-options: -haddock
   test-show-details: direct
 
+
+-- stylish-haskell 9.0
+source-repository-package
+  type: git
+  location: https://github.com/July541/stylish-haskell.git
+  tag: b08a85716b991359a46a32e8e7ba5780664d31ae
+
 write-ghc-environment-files: never
 
 index-state: 2022-03-08T10:53:01Z
@@ -42,7 +49,7 @@ index-state: 2022-03-08T10:53:01Z
 constraints:
   -- These plugins don't work on GHC9 yet
   -- Add a plugin needs remove the -flag but also update ghc bounds in hls.cabal
-  haskell-language-server +ignore-plugins-ghc-bounds -stylishhaskell,
+  haskell-language-server +ignore-plugins-ghc-bounds,
   ghc-lib-parser ^>= 9.0
 
 -- although we are not building all plugins cabal solver phase is run for all packages
@@ -56,10 +63,6 @@ allow-newer:
   data-tree-print:base,
   -- https://github.com/lspitzner/butcher/pull/8
   butcher:base,
-
-  stylish-haskell:Cabal,
-  stylish-haskell:ghc-lib-parser,
-  stylish-haskell:aeson,
 
   -- ghc-9.0.2 specific
   -- for ghcide:test via ghc-typelits-knownnat
