--- a/hls-test-utils/hls-test-utils.cabal
+++ b/hls-test-utils/hls-test-utils.cabal
@@ -41,9 +41,9 @@ library
     , directory
     , extra
     , filepath
-    , ghcide                  ^>=1.6
+    , ghcide                  ^>=1.6 || ^>=1.7
     , hls-graph
-    , hls-plugin-api          ^>=1.3
+    , hls-plugin-api          ^>=1.3 || ^>=1.4
     , lens
     , lsp                     ^>=1.4
     , lsp-test                ^>=0.14
