--- a/plugins/hls-alternate-number-format-plugin/hls-alternate-number-format-plugin.cabal
+++ b/plugins/hls-alternate-number-format-plugin/hls-alternate-number-format-plugin.cabal
@@ -26,10 +26,10 @@ library
       aeson
     , base                 >=4.12 && < 5
     , containers
-    , ghcide               ^>=1.6
+    , ghcide               ^>=1.6 || ^>=1.7
     , ghc-boot-th
     , hls-graph
-    , hls-plugin-api       ^>=1.3
+    , hls-plugin-api       ^>=1.3 || ^>=1.4
     , hie-compat
     , lens
     , lsp
