--- a/plugins/hls-brittany-plugin/hls-brittany-plugin.cabal
+++ b/plugins/hls-brittany-plugin/hls-brittany-plugin.cabal
@@ -25,8 +25,8 @@ library
     , brittany        >=0.13.1.0 && < 0.14.0.1 || > 0.14.0.1
     , filepath
     , ghc-boot-th
-    , ghcide          ^>=1.6
-    , hls-plugin-api  ^>=1.3
+    , ghcide          ^>= 1.6 || ^>= 1.7
+    , hls-plugin-api  ^>= 1.3 || ^>= 1.4
     , lens
     , lsp-types
     , text
