--- a/plugins/hls-call-hierarchy-plugin/hls-call-hierarchy-plugin.cabal
+++ b/plugins/hls-call-hierarchy-plugin/hls-call-hierarchy-plugin.cabal
@@ -30,9 +30,9 @@ library
     , containers
     , extra
     , ghc
-    , ghcide                ^>=1.6
+    , ghcide                ^>= 1.6 || ^>= 1.7
     , hiedb
-    , hls-plugin-api        ^>=1.2 || ^>= 1.3
+    , hls-plugin-api        ^>= 1.2 || ^>= 1.3 || ^>= 1.4
     , lens
     , lsp                    >=1.2.0.1
     , sqlite-simple
