--- a/plugins/hls-change-type-signature-plugin/hls-change-type-signature-plugin.cabal
+++ b/plugins/hls-change-type-signature-plugin/hls-change-type-signature-plugin.cabal
@@ -22,8 +22,8 @@ library
   hs-source-dirs:   src
   build-depends:
     , base                 >=4.12 && < 5
-    , ghcide          ^>=1.6
-    , hls-plugin-api  ^>=1.3
+    , ghcide          ^>=1.6 || ^>=1.7
+    , hls-plugin-api  ^>=1.3 || ^>=1.4
     , lsp-types       
     , regex-tdfa
     , syb
