--- a/plugins/hls-floskell-plugin/hls-floskell-plugin.cabal
+++ b/plugins/hls-floskell-plugin/hls-floskell-plugin.cabal
@@ -22,8 +22,8 @@ library
   build-depends:
     , base            >=4.12 && <5
     , floskell        ^>=0.10
-    , ghcide          ^>=1.6
-    , hls-plugin-api  ^>=1.3
+    , ghcide          ^>=1.6 || ^>=1.7
+    , hls-plugin-api  ^>=1.3 || ^>=1.4
     , lsp-types
     , text
     , transformers
