--- a/plugins/hls-haddock-comments-plugin/hls-haddock-comments-plugin.cabal
+++ b/plugins/hls-haddock-comments-plugin/hls-haddock-comments-plugin.cabal
@@ -29,8 +29,8 @@ library
     , containers
     , ghc
     , ghc-exactprint
-    , ghcide                ^>=1.6
-    , hls-plugin-api        ^>=1.3
+    , ghcide                ^>=1.6 || ^>=1.7
+    , hls-plugin-api        ^>=1.3 || ^>=1.4
     , lsp-types
     , text
     , unordered-containers
