--- a/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
+++ b/plugins/hls-ormolu-plugin/hls-ormolu-plugin.cabal
@@ -24,8 +24,8 @@ library
     , filepath
     , ghc
     , ghc-boot-th
-    , ghcide          ^>=1.6
-    , hls-plugin-api  ^>=1.3
+    , ghcide          ^>=1.6 || ^>=1.7
+    , hls-plugin-api  ^>=1.3 || ^>=1.4
     , lens
     , lsp
     , ormolu          ^>=0.1.2 || ^>= 0.2 || ^>= 0.3 || ^>= 0.4
