--- a/plugins/hls-qualify-imported-names-plugin/hls-qualify-imported-names-plugin.cabal
+++ b/plugins/hls-qualify-imported-names-plugin/hls-qualify-imported-names-plugin.cabal
@@ -26,9 +26,9 @@ library
     , containers
     , deepseq
     , ghc
-    , ghcide                ^>=1.6
+    , ghcide                ^>=1.6 || ^>=1.7
     , hls-graph
-    , hls-plugin-api        ^>=1.3
+    , hls-plugin-api        ^>=1.3 || ^>=1.4
     , lsp
     , text
     , unordered-containers
