--- a/plugins/hls-selection-range-plugin/hls-selection-range-plugin.cabal
+++ b/plugins/hls-selection-range-plugin/hls-selection-range-plugin.cabal
@@ -32,8 +32,8 @@ library
     , aeson
     , base             >=4.12 && <5
     , containers
-    , ghcide           ^>=1.6
-    , hls-plugin-api   ^>=1.3
+    , ghcide           ^>=1.6 || ^>=1.7
+    , hls-plugin-api   ^>=1.3 || ^>=1.4
     , lsp
     , transformers
     , mtl
