--- a/plugins/hls-splice-plugin/hls-splice-plugin.cabal
+++ b/plugins/hls-splice-plugin/hls-splice-plugin.cabal
@@ -38,8 +38,8 @@ library
     , foldl
     , ghc
     , ghc-exactprint
-    , ghcide                ^>=1.6
-    , hls-plugin-api        ^>=1.3
+    , ghcide                ^>=1.6 || ^>=1.7
+    , hls-plugin-api        ^>=1.3 || ^>=1.4
     , lens
     , lsp
     , retrie
