--- a/stack-9.2.yaml
+++ b/stack-9.2.yaml
@@ -22,7 +22,7 @@ packages:
 # - ./plugins/hls-splice-plugin
 # - ./plugins/hls-tactics-plugin
 # - ./plugins/hls-brittany-plugin
-# - ./plugins/hls-stylish-haskell-plugin
+- ./plugins/hls-stylish-haskell-plugin
 - ./plugins/hls-floskell-plugin
 - ./plugins/hls-fourmolu-plugin
 - ./plugins/hls-pragmas-plugin
@@ -94,6 +94,8 @@ extra-deps:
 - unix-2.7.2.2
 - Win32-2.12.0.1
 
+- stylish-haskell-0.14.1.0
+
 # currently needed for ghcide>extra, etc.
 allow-newer: true
 
@@ -120,7 +122,6 @@ flags:
     hlint: false
     retrie: false
     splice: false
-    stylishhaskell: false
     tactic: false
 
   retrie:
