--- a/plugins/hls-class-plugin/hls-class-plugin.cabal
+++ b/plugins/hls-class-plugin/hls-class-plugin.cabal
@@ -28,14 +28,17 @@ library
     , base            >=4.12 && <5
     , containers
     , ghc
-    -- Require ghc-exactprint >= 1.5 on ghc9.2
-    , ghc-exactprint  >= 0.6.4
     , ghcide          ^>=1.7
     , hls-plugin-api  ^>=1.4
     , lens
     , lsp
     , text
     , transformers
+
+  if impl(ghc >=9.2.1)
+    build-depends: ghc-exactprint ^>= 1.5
+  else
+    build-depends: ghc-exactprint  >= 0.6.4 && <1.1
 
   default-language:   Haskell2010
   default-extensions:
