--- a/plugins/hls-hlint-plugin/hls-hlint-plugin.cabal
+++ b/plugins/hls-hlint-plugin/hls-hlint-plugin.cabal
@@ -25,19 +25,6 @@ flag pedantic
   default:     False
   manual:      True
 
-flag ghc-lib
-  default:     False
-  manual:      True
-  description:
-    Force dependency on ghc-lib-parser even if GHC API in the ghc package is supported
-
-flag hlint34
-  default:     True
-  manual:      False
-  description:
-    Hlint-3.4 doesn't support versions ghc-lib < 9.0.1 nor ghc <= 8.6, so we can use hlint-3.2 for backwards compat
-    This flag can be removed when all dependencies support ghc-lib-9.0.* and we drop support for ghc-8.6
-
 library
   exposed-modules:    Ide.Plugin.Hlint
   hs-source-dirs:     src
@@ -56,7 +43,7 @@ library
     , ghc-exactprint        >=0.6.3.4
     , ghcide                ^>=1.7
     , hashable
-    , hlint
+    , hlint                 < 3.5
     , hls-plugin-api        ^>=1.4
     , hslogger
     , lens
@@ -69,41 +56,11 @@ library
     , transformers
     , unordered-containers
     , apply-refact          >=0.9.0.0
-    -- can be removed if https://github.com/ndmitchell/hlint/pull/1325#issue-1077062712 is merged
-    -- and https://github.com/haskell/haskell-language-server/pull/2464#issue-1077133441 is updated
-    -- accordingly
+    , ghc-lib
+    , ghc-lib-parser
     , ghc-lib-parser-ex
 
-  if (flag(hlint34))
-    -- This mirrors the logic in hlint.cabal for hlint-3.3
-    -- https://github.com/ndmitchell/hlint/blob/d3576de4529d8df6cca5a345f5b7e04474ff7bff/hlint.cabal#L79-L88
-    -- so we can make sure that we do the same thing as hlint
-    build-depends: hlint      ^>=3.4
-
-    if (!flag(ghc-lib) && impl(ghc >=9.0.1) && impl(ghc <9.1.0))
-      build-depends: ghc      ==9.0.*
-    else
-      build-depends:
-        , ghc-lib            ^>=9.2
-        , ghc-lib-parser-ex  ^>=9.2
-        , ghc-lib-parser     ^>=9.2
-
-      cpp-options:   -DHLINT_ON_GHC_LIB
-
-  else
-    -- This mirrors the logic in hlint.cabal for hlint-3.2
-    -- https://github.com/ndmitchell/hlint/blob/c7354e473c7d09213c8adc3dc94bf50a6eb4a42d/hlint.cabal#L79-L88
-    build-depends: hlint        ^>=3.2
-    if (!flag(ghc-lib) && impl(ghc >=8.10.1) && impl(ghc < 8.11.0))
-      build-depends: ghc >=8.10 && <9.0
-    else
-      build-depends:
-        , ghc
-        , ghc-lib            ^>=8.10.7.20210828
-        , ghc-lib-parser-ex  ^>=8.10
-
-      cpp-options:   -DHLINT_ON_GHC_LIB
-
+  cpp-options:   -DHLINT_ON_GHC_LIB
   ghc-options:
     -Wall -Wredundant-constraints -Wno-name-shadowing
     -Wno-unticked-promoted-constructors
