enable hlint:ghc-lib on all stack descriptors

--- a/stack-lts19.yaml
+++ b/stack-lts19.yaml
@@ -69,6 +69,8 @@ flags:
   # Stack doesn't support automatic flags.
   hyphenation:
     embed: true
+  hlint:
+    ghc-lib: true
 
 nix:
   packages: [ icu libcxx zlib ]
