--- a/stack-lts16.yaml
+++ b/stack-lts16.yaml
@@ -104,10 +104,10 @@ flags:
     pedantic: true
   retrie:
     BuildExecutable: false
-  # Stack doesn't support automatic flags.
-  # Until the formatters support ghc-lib-9, we need this flag disabled
   hyphenation:
     embed: true
+  hlint:
+    ghc-lib: true
 
 nix:
   packages: [icu libcxx zlib]
