Compatibility with older aeson releases

--- a/plugins/hls-call-hierarchy-plugin/hls-call-hierarchy-plugin.cabal
+++ b/plugins/hls-call-hierarchy-plugin/hls-call-hierarchy-plugin.cabal
@@ -24,7 +24,7 @@ library
 
   hs-source-dirs:     src
   build-depends:
-    , aeson                 >=1.5.2.0
+    , aeson
     , base                  >=4.12 && <5
     , bytestring
     , containers
