--- a/cabal-ghc92.project
+++ b/cabal-ghc92.project
@@ -34,8 +34,7 @@ with-compiler: ghc-9.2.2
 tests: true
 
 package *
-  -- ghc 8.10 cannot build ghc-lib 9.2 with --haddock
-  -- ghc-options: -haddock
+  ghc-options: -haddock
   test-show-details: direct
 
 write-ghc-environment-files: never
