--- a/cabal.project
+++ b/cabal.project
@@ -46,7 +46,32 @@ write-ghc-environment-files: never
 index-state: 2022-04-27T09:22:49Z
 
 constraints:
+  ghc-lib-parser-ex -auto,
   hyphenation +embed,
   hls-hlint-plugin +ghc-lib,
+  hlint +ghc-lib,
+  stylish-haskell +ghc-lib
 
 allow-newer:
+  -- ghc-9.2
+  ----------
+  hiedb:base,
+  retrie:ghc-exactprint,
+
+  -- for brittany
+  brittany:ghc-boot,
+  brittany:ghc-boot-th,
+  brittany:ghc,
+  brittany:ghc-exactprint,
+  brittany:bytestring,
+  brittany:base,
+  -- https://github.com/lspitzner/multistate/pull/8
+  multistate:base,
+  -- https://github.com/lspitzner/data-tree-print/pull/3
+  data-tree-print:base,
+  -- https://github.com/lspitzner/butcher/pull/8
+  butcher:base,
+
+  -- for shake-bench
+  Chart:lens,
+  Chart-diagrams:lens,
