Add CI for the new flag

--- a/.github/workflows/flags.yml
+++ b/.github/workflows/flags.yml
@@ -67,6 +67,10 @@ jobs:
       - name: Build `ghcide` with flags
         run: cabal v2-build ghcide --flags="ghc-patched-unboxed-bytecode test-exe executable bench-exe"
 
+      - if: matrix.ghc == '8.10.7'
+        name: Build `ghcide` with ekg
+        run: cabal v2-build ghcide --flags="ekg"
+
       # we have to clean up warnings for 9.0 and 9.2 before enable -WAll
       - if: matrix.ghc != '9.0.2' && matrix.ghc != '9.2.2'
         name: Build with pedantic (-WError)
