--- a/ghcide/ghcide.cabal
+++ b/ghcide/ghcide.cabal
@@ -72,7 +72,7 @@ library
         optparse-applicative,
         parallel,
         prettyprinter-ansi-terminal,
-        prettyprinter,
+        prettyprinter >= 1.7,
         random,
         regex-tdfa >= 1.3.1.0,
         retrie,
