--- a/ghcide/ghcide.cabal
+++ b/ghcide/ghcide.cabal
@@ -108,6 +108,9 @@ library
         hie-bios ^>= 0.9.1,
         implicit-hie-cradle ^>= 0.3.0.5 || ^>= 0.5,
         base16-bytestring >=0.1.1 && <1.1
+    if impl(ghc >= 9.2)
+      build-depends:
+        ghc-exactprint >= 1.4
     if os(windows)
       build-depends:
         Win32
