--- a/plugins/hls-haddock-comments-plugin/hls-haddock-comments-plugin.cabal
+++ b/plugins/hls-haddock-comments-plugin/hls-haddock-comments-plugin.cabal
@@ -28,7 +28,7 @@ library
     , base                  >=4.12 && <5
     , containers
     , ghc
-    , ghc-exactprint
+    , ghc-exactprint        < 1
     , ghcide                ^>=1.6 || ^>=1.7
     , hls-plugin-api        ^>=1.3 || ^>=1.4
     , lsp-types
