--- a/cabal.project
+++ b/cabal.project
@@ -47,6 +47,8 @@ index-state: 2022-04-27T09:22:49Z
 
 constraints:
     hyphenation +embed,
+    -- remove this when hlint sets ghc-lib to true by default
+    -- https://github.com/ndmitchell/hlint/issues/1376
     hlint +ghc-lib
 
 allow-newer:
