restore the ghc-lib flag now with a default True

--- a/plugins/hls-hlint-plugin/hls-hlint-plugin.cabal
+++ b/plugins/hls-hlint-plugin/hls-hlint-plugin.cabal
@@ -25,6 +25,11 @@ flag pedantic
   default:     False
   manual:      True
 
+flag ghc-lib
+   default:     True
+   manual:      True
+   description: Use ghc-lib types (requires hlint to be built with ghc-lib)
+
 library
   exposed-modules:    Ide.Plugin.Hlint
   hs-source-dirs:     src
