--- a/plugins/hls-pragmas-plugin/hls-pragmas-plugin.cabal
+++ b/plugins/hls-pragmas-plugin/hls-pragmas-plugin.cabal
@@ -25,7 +25,7 @@ library
     , extra
     , fuzzy
     , ghc
-    , ghcide                ^>=1.6 || ^>=1.7
+    , ghcide                ^>=1.7
     , hls-plugin-api        ^>=1.3 || ^>=1.4
     , lens
     , lsp
