--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -100,19 +100,19 @@ jobs:
       with:
         name: haskell-language-server
         authToken: ${{ secrets.HLS_CACHIX_AUTH_TOKEN }}
+    # smunix: temporarily disabling this to allow the builds to complete and
+    # push binaries to caches. Will re-enable later.
     # - name: Build development shell
     #   run: nix develop --print-build-logs --profile dev
     # - name: Build all development shell (without nix dependencies)
     #   run: nix develop --print-build-logs .#all-simple-dev-shells --profile dev
     # We only build nix dev shell for current GHC version because some are
     # failing with different GHC version on darwin.
-    - name: Build development shell with nix dependencies for current GHC version
-      run: nix develop --print-build-logs .#all-nix-dev-shells --profile dev
-    - name: Push development shell
-      if: ${{ env.HAS_TOKEN == 'true' }}
-      run: cachix push haskell-language-server dev
-    # smunix: temporarily disabling this to allow the builds to complete and
-    # push binaries to caches. Will re-enable later.
+    # - name: Build development shell with nix dependencies for current GHC version
+    #   run: nix develop --print-build-logs .#all-nix-dev-shells --profile dev
+    # - name: Push development shell
+    #   if: ${{ env.HAS_TOKEN == 'true' }}
+    #   run: cachix push haskell-language-server dev
     # - name: Build binaries
     #   run: nix build --print-build-logs
     - name: Build all binaries
