--- a/plugins/hls-brittany-plugin/hls-brittany-plugin.cabal
+++ b/plugins/hls-brittany-plugin/hls-brittany-plugin.cabal
@@ -17,6 +17,10 @@ extra-source-files:
   test/testdata/**/*.hs
 
 library
+  if impl(ghc >= 9.2)
+    buildable: False
+  else
+    buildable: True
   exposed-modules:  Ide.Plugin.Brittany
   hs-source-dirs:   src
   build-depends:
@@ -39,6 +43,10 @@ library
   default-language: Haskell2010
 
 test-suite tests
+  if impl(ghc >= 9.2)
+    buildable: False
+  else
+    buildable: True
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
