--- a/.github/workflows/flags.yml
+++ b/.github/workflows/flags.yml
@@ -65,7 +65,7 @@ jobs:
         run: cabal v2-build hls-graph --flags="embed-files stm-stats"
 
       - name: Build `ghcide` with flags
-        run: cabal v2-build ghcide --flags="ghc-patched-unboxed-bytecode test-exe executable bench-exe"
+        run: cabal v2-build ghcide --flags="ghc-patched-unboxed-bytecode test-exe executable bench-exe ekg"
 
       # we have to clean up warnings for 9.0 and 9.2 before enable -WAll
       - if: matrix.ghc != '9.0.2' && matrix.ghc != '9.2.2'
