--- a/cabal.project
+++ b/cabal.project
@@ -53,6 +53,15 @@ constraints:
   ghc-lib-parser-ex -auto,
   stylish-haskell +ghc-lib
 
+-- This is benign and won't affect our ability to release to Hackage,
+-- because we only depend on `ekg-json` when a non-default flag
+-- is turned on.
+source-repository-package
+  type:git
+  location: https://github.com/pepeiborra/ekg-json
+  tag: 7a0af7a8fd38045fd15fb13445bdcc7085325460
+  -- https://github.com/tibbe/ekg-json/pull/12
+
 allow-newer:
   -- ghc-9.2
   ----------
@@ -70,3 +79,13 @@ allow-newer:
   -- for shake-bench
   Chart:lens,
   Chart-diagrams:lens,
+
+  -- for ekg
+  ekg-core:base,
+  ekg-core:ghc-prim,
+  ekg-wai:base,
+  ekg-wai:time,
+
+  -- for shake-bench
+  Chart-diagrams:diagrams-core,
+  SVGFonts:diagrams-core
