--- a/plugins/hls-alternate-number-format-plugin/hls-alternate-number-format-plugin.cabal
+++ b/plugins/hls-alternate-number-format-plugin/hls-alternate-number-format-plugin.cabal
@@ -29,7 +29,7 @@ library
     , ghcide               ^>=1.6 || ^>=1.7
     , ghc-boot-th
     , hls-graph
-    , hls-plugin-api       ^>=1.3 || ^>=1.4
+    , hls-plugin-api       ^>=1.4
     , hie-compat
     , lens
     , lsp
