--- a/plugins/hls-change-type-signature-plugin/hls-change-type-signature-plugin.cabal
+++ b/plugins/hls-change-type-signature-plugin/hls-change-type-signature-plugin.cabal
@@ -24,7 +24,7 @@ library
   build-depends:
     , base             >=4.12 && < 5
     , ghcide          ^>=1.7
-    , hls-plugin-api  ^>=1.3 || ^>=1.4
+    , hls-plugin-api  ^>=1.4
     , lsp-types
     , regex-tdfa
     , syb
