--- a/plugins/hls-splice-plugin/hls-splice-plugin.cabal
+++ b/plugins/hls-splice-plugin/hls-splice-plugin.cabal
@@ -39,7 +39,7 @@ library
     , ghc
     , ghc-exactprint
     , ghcide                ^>=1.6 || ^>=1.7
-    , hls-plugin-api        ^>=1.3 || ^>=1.4
+    , hls-plugin-api        ^>=1.4
     , lens
     , lsp
     , retrie
