--- a/plugins/hls-code-range-plugin/hls-code-range-plugin.cabal
+++ b/plugins/hls-code-range-plugin/hls-code-range-plugin.cabal
@@ -1,5 +1,5 @@
 cabal-version:      2.4
-name:               hls-selection-range-plugin
+name:               hls-code-range-plugin
 version:            1.0.0.0
 synopsis:
   HLS Plugin to support smart selection range
@@ -16,15 +16,16 @@ category:           Development
 build-type:         Simple
 extra-source-files:
   LICENSE
-  test/testdata/*.hs
-  test/testdata/*.yaml
-  test/testdata/*.txt
+  test/testdata/selection-range/*.hs
+  test/testdata/selection-range/*.yaml
+  test/testdata/selection-range/*.txt
 
 library
   exposed-modules:
-    Ide.Plugin.SelectionRange
+    Ide.Plugin.CodeRange
+    Ide.Plugin.CodeRange.Rules
   other-modules:
-    Ide.Plugin.SelectionRange.ASTPreProcess
+    Ide.Plugin.CodeRange.ASTPreProcess
   ghc-options: -Wall
   hs-source-dirs: src
   default-language:   Haskell2010
@@ -32,29 +33,40 @@ library
     , aeson
     , base             >=4.12 && <5
     , containers
-    , ghcide           ^>=1.6 || ^>=1.7
-    , hls-plugin-api   ^>=1.3 || ^>=1.4
-    , lsp
-    , transformers
-    , mtl
-    , text
+    , deepseq
     , extra
+    , ghcide           ^>=1.6 || ^>=1.7
+    , hashable
+    , hls-plugin-api   ^>=1.3 || ^>=1.4
+    , lens
+    , lsp
+    , mtl
     , semigroupoids
+    , text
+    , transformers
+    , vector
 
 test-suite tests
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
   main-is:          Main.hs
+  other-modules:
+    Ide.Plugin.CodeRangeTest
+    Ide.Plugin.CodeRange.RulesTest
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
   build-depends:
     , base
+    , bytestring
     , containers
     , filepath
-    , hls-selection-range-plugin
+    , ghcide                     ^>=1.6 || ^>=1.7
+    , hls-code-range-plugin
     , hls-test-utils             ^>=1.2 || ^>=1.3
+    , lens
     , lsp
     , lsp-test
+    , tasty-hunit
     , text
-    , bytestring
-    , lens
+    , transformers
+    , vector
